<resources>
    <string name="app_name">Tour Nashville</string>
    <string name="blankFragment">Blank fragment</string>
    <string name="about"><![CDATA[<span style="color:#FFFFFF">About</span>]]></string>
    <string name="nashMap"><![CDATA[<span style="color:#FFFFFF">City Map</span>]]></string>
    <string name="mta"><![CDATA[<span style="color:#FFFFFF">Metro Transit</span>]]></string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="locationTitle">Place</string>
    <string name="addressText">Address</string>
    <string name="hoursText">Hours</string>
    <string name="priceText">Price</string>
    <string name="contactText">Location &amp; Contact</string>
    <string name="imageOfLocation">Image</string>
    <string name="cityMap">Map of Nashville</string>
    <string name="category_music">Music</string>
    <string name="category_museum">Museums</string>
    <string name="category_brewery">Brewery</string>
    <string name="category_food">Food</string>
    <string name="category_outdoor">Outdoors</string>
    <string name="retroImage">retro skyline image</string>
    <string name="museumTitle">Johnny Cash Museum</string>
    <string name="museumAddress">119 &#8211; 6th Ave So.\nNashville, TN 37201</string>
    <string name="museumHours">Daily: 6am-9pm</string>
    <string name="museumPrice">General $19.95
                                \nYouth $15.95 (ages 6&#8211;15)
                                \n5 &amp; under free with adult admission</string>
    <string name="museumDescription">Visit the cafe inside for the finest award winning coffee,
                                breakfast and lunch sandwiches, pastries and more.</string>
    <string name="museumTitle2">Frist Art Museum</string>
    <string name="museumAddress2">919 Broadway\nNashville, TN, 37203</string>
    <string name="museumHours2">Mon-Wed: 10am-5:30pm
                                \nThurs &amp; Fri: 10am-9pm
                                \nSat: 10am-5:30pm
                                \nSun: 1pm-5:30pm</string>
    <string name="museumPrice2">18 &amp; younger: Free\n
                                Adults: $12.00\n
                                Seniors (65+): $9.00</string>
    <string name="museumDescription2">The Frist Art Museum opened in April 2001, and since that time
        has hosted a spectacular array of art from the region and from around the world.</string>
    <string name="museumTitle3">The Parthenon</string>
    <string name="museumAddress3">2500 West End Avenue\nNashville, TN 37203</string>
    <string name="museumHours3">Tue-Sat: 9am-4:30pm\nSun: 12:30pm-4:30pm\n(Closed Monday)</string>
    <string name="museumPrice3">Adults: $6.00
                                \nKids (4&#8211;7): $4.00
                                \nSeniors (over 62): $4.00</string>
    <string name="museumDescription3">The Parthenon stands proudly as the centerpiece of Centennial
        Park, Nashville\'s premier urban park. Originally built for Tennessee\'s 1897 Centennial
        Exposition.</string>
    <string name="museumTitle4">Tennessee Central Railway Museum</string>
    <string name="museumAddress4">220 Willow Street,\nNashville, TN 37210\n(615) 244&#8211;9001</string>
    <string name="museumHours4">Call for hours</string>
    <string name="museumPrice4">Call for pricing</string>
    <string name="museumDescription4">The Tennessee Central Railway Museum is dedicated to the
        preservation of Tennessee\'s railroad heritage.  http://www.tcry.org/</string>
    <string name="musicTitle">Tootsie\'s Orchid Lounge</string>
    <string name="musicAddress">422 Broadway\nNashville, TN 37203</string>
    <string name="musicHours">Daily: 11am&#8211;2:30am</string>
    <string name="musicPrice">n/a</string>
    <string name="musicDescription">Also known as Tootsie\'s World Famous Orchid Lounge, where
        performers have taken the stage since the early 1960s in hopes of being discovered.</string>
    <string name="musicTitle2">Ryman Auditorium</string>
    <string name="musicAddress2">116 Fifth Avenue North\n
                                Nashville, TN 37219\n
                                (615) 889&#8211;3060</string>
    <string name="musicHours2">Museum Tours\n9am&#8211;4:30pm
                               \nCafe Lula\n9 am&#8211;5pm</string>
    <string name="musicPrice2">Varies by show</string>
    <string name="musicDescription2">This place is hallowed ground. This is the exact spot where
        bluegrass was born—where Johnny Cash met June Carter, where souls were saved and a slice of
        history was nearly lost. It was right here that country music found an audience beyond its
        own back porch, and countless careers took off as deals were signed on napkins and paper
        scraps backstage. https://ryman.com  http://www.cafelula.net/ </string>
    <string name="musicTitle3">Wildhorse Saloon</string>
    <string name="musicAddress3">120 Second Ave North\nNashville, TN 37201</string>
    <string name="musicHours3">Daily: 11am&#8211;1am</string>
    <string name="musicPrice3">Free</string>
    <string name="musicDescription3">HERE there’s a strict no-holds-barred-policy, where you have
        permission to forget the world outside and get lost — IN the music, ON  the dance floor, or
        WITH the taste of our award-winning BBQ. https://wildhorsesaloon.com/</string>
    <string name="musicTitle4">Music City Walk of Fame</string>
    <string name="musicAddress4">Located on Demonbreun Street\nbetween 4th &amp; 5th Avenues South</string>
    <string name="musicHours4">n/a</string>
    <string name="musicPrice4">Free</string>
    <string name="musicDescription4">The stars on the Walk of Fame, spanning genres and generations,
        honor those that make, create, record, perform, and present music to and for the world.
        http://www.visitmusiccity.com/walkoffame/</string>
    <string name="outdoorTitle">Cheekwood Estate &amp; Gardens</string>
    <string name="outdoorAddress">1200 Forrest Park Drive\nNashville, TN 37205</string>
    <string name="outdoorHours">Tue&#8211;Sun: 9am&#8211;5pm</string>
    <string name="outdoorPrice">Adults $20
                                \nKids (3&#8211;17) $13
                                \nSeniors (65+) $18</string>
    <string name="outdoorDescription">Cheekwood offers many diverse experiences, but a singularly
        serene environment that will leave you restored and rejuvenated.</string>
    <string name="outdoorTitle2">Nashville Zoo</string>
    <string name="outdoorAddress2">3777 Nolensville Pike\nNashville, TN 37211</string>
    <string name="outdoorHours2">Oct 13 &#8211; Mar 9: 9am&#8211;4pm\n
                                 Mar 10 &#8211; Oct 11: 9am&#8211;6pm</string>
    <string name="outdoorPrice2">Adults/Teens $17
                                \nKids (2-12) $12
                                \nSeniors (65+) $15</string>
    <string name="outdoorDescription2">Nashville Zoo\'s experienced staff is actively involved in
        research, habitat protection, breeding programs and education initiatives around the globe
        as well as in our own backyard.</string>
    <string name="outdoorTitle3">General Jackson Showboat</string>
    <string name="outdoorAddress3">2812 Opryland Drive\nNashville, TN</string>
    <string name="outdoorHours3">Varies by tour</string>
    <string name="outdoorPrice3">Varies by date &amp; show</string>
    <string name="outdoorDescription3">General Jackson was named after another riverboat of the
        same name that was built in 1817; that boat was in turn named for Andrew Jackson. The
        modern boat was originally an attraction at the Opryland USA theme park. The park closed
        in 1997, but the boat remains in service, docking at Pennington Bend near the Opry Mills
        shopping center that replaced the park.</string>
    <string name="outdoorTitle4">Bicentennial Capitol Mall State Park</string>
    <string name="outdoorAddress4">600 James Robertson Pkwy\nNashville, TN 37243</string>
    <string name="outdoorHours4">Daily: 8am&#8211;Dusk</string>
    <string name="outdoorPrice4">FREE</string>
    <string name="outdoorDescription4">Located in the shadow of the Capitol in downtown Nashville,
        visitors can experience many facets of Tennessee’s history including a 200-foot granite map
        of the state, a World War II Memorial, a 95-Bell Carillon, a Pathway of History and the
        Rivers of Tennessee Fountains.</string>
    <string name="foodTitle">Pancake Pantry</string>
    <string name="foodAddress">1796 21st Avenue S, Nashville\nTN 37212</string>
    <string name="foodHours">Mon&#8211;Fri: 6am&#8211;3pm
                            \nSat &amp; Sun: 6am&#8211;4pm</string>
    <string name="foodPrice">n/a</string>
    <string name="foodDescription">Since 1961, we\'ve been serving scratch-made pancakes and much
        more to visitors and locals alike in the Hillsboro Village neighborhood.
        http://www.thepancakepantry.com/</string>
    <string name="foodTitle2">Loveless Cafe</string>
    <string name="foodAddress2">8400 Hwy 100\nNashville, TN 37221</string>
    <string name="foodHours2">Daily: 7am&#8211;9pm</string>
    <string name="foodPrice2">n/a</string>
    <string name="foodDescription2">For more than 65 years, the Loveless Cafe has been offering
        families and friends a place where they can enjoy a home-cooked, Southern meal and reconnect
        with each other around the table. https://www.lovelesscafe.com</string>
    <string name="foodTitle3">Fido</string>
    <string name="foodAddress3">1812 21st Ave. S.\nNashville, TN 37212</string>
    <string name="foodHours3">Daily:7am&#8211;11pm
                            \nKitchen: Mon 7am&#8211;9pm
                            \nTue&#8211;Sun: 7am&#8211;10pm</string>
    <string name="foodPrice3">n/a</string>
    <string name="foodDescription3">Fido blurs the line between upscale coffeehouse and casual
        restaurant with an emphasis on organic and local foods served in an inviting atmosphere.
        http://www.fidonashville.com/</string>
    <string name="foodTitle4">Sambuca</string>
    <string name="foodAddress4">601 12th Avenue South
                                \nNashville, TN 37203
                                \n(615) 248&#8211;2888</string>
    <string name="foodHours4">Mon-Sun: Dinner: 5pm-10pm
                              \nTue-Sun: Lunch: 11am-3pm</string>
    <string name="foodPrice4">n/a</string>
    <string name="infoGeography">Geography.
                                \nNashville is the capital of Tennessee.
                                \nFounded	1779
                                \nIncorporated	1806</string>
    <string name="aboutNashville">The town of Nashville was founded by James Robertson, John Donelson,
        and a party of Overmountain Men in 1779, near the original Cumberland settlement of Fort Nashborough.
        It was named for Francis Nash, the American Revolutionary War hero. Nashville quickly grew
        because of its strategic location, accessibility as a port on the Cumberland River, a
        tributary of the Ohio River; and its later status as a major railroad center.
        \nBy 1800, the city had 345 residents, including 136 enslaved African Americans and 14 free
        African American residents. In 1806, Nashville was incorporated as a city and became the county
        seat of Davidson County, Tennessee. In 1843, the city was named the permanent capital of
        the state of Tennessee.\n</string>
     <string name="link"><![CDATA[
    <a href="https://en.wikipedia.org/wiki/Nashville,_Tennessee">Nashville\'s Wiki page]]></string>
</resources>