<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="@dimen/cardViewMargin"
        card_view:cardCornerRadius="@dimen/cardview_default_radius"
        card_view:cardElevation="@dimen/cardElevation">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageOfLocation"
                style="@style/imageLocation"
                android:layout_height="170dp"
                android:layout_marginTop="20dp"
                android:contentDescription="@string/imageOfLocation"
                android:src="@drawable/nashvilleskyline1280" />

            <TextView
                android:id="@+id/titleTextView"
                style="@style/titleTextView"
                android:layout_height="30dp"
                android:text="@string/locationTitle" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imageOfLocation"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="3"
                    android:padding="@dimen/padding10dp"
                    android:text="@string/museumTitle"
                    android:textColor="@color/colorPrimary" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:padding="@dimen/padding10dp">

                    <TextView
                        android:id="@+id/addressTextView"
                        style="@style/contactsTextStyle"
                        android:text="@string/addressText" />

                    <TextView
                        android:id="@+id/businessHoursTextView"
                        style="@style/contactsTextStyle"
                        android:text="@string/hoursText"
                        android:textAllCaps="false" />

                    <TextView
                        android:id="@+id/priceTextView"
                        style="@style/contactsTextStyle.price"
                        android:text="@string/priceText" />

                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>