<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <!-- Image from <a href="https://www.Vecteezy.com/">Graphics by: Vecteezy -->
        <ImageView
            android:id="@+id/retroskyline"
            android:layout_width="match_parent"
            android:layout_height="270dp"
            android:contentDescription="@string/retroImage"
            android:scaleType="centerCrop"
            android:src="@drawable/retronashvilleskyline" />

        <TextView
            android:id="@+id/interest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/retroskyline"
            android:paddingLeft="@dimen/paddingInfo"
            android:paddingRight="@dimen/paddingInfo"
            android:text="@string/aboutNashville"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/textAboutInfo"/>

        <TextView
            android:id="@+id/link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/interest"
            android:paddingLeft="@dimen/paddingInfo"
            android:paddingRight="@dimen/paddingInfo"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/textAboutInfo"
            android:text="@string/link"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/link"
            android:padding="@dimen/paddingCityInfo"
            android:text="@string/infoGeography"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/textSizeCityInfo" />

    </RelativeLayout>

</ScrollView>