<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="245dp"
        android:layout_marginTop="30dp"
        android:background="@color/colorWhite"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            android:paddingTop="@dimen/paddingTopGeneral"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginEnd="@dimen/expandedTitleMarginEnd"
            app:expandedTitleMarginStart="@dimen/expandedTitleMarginStart"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:id="@+id/resourceImageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/nashvilleSkyline"
                android:cropToPadding="true"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                android:src="@drawable/nashvilleskyline1280" />

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>
    <!-- Scrollable View-->
    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/locationTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding10dp"
                android:text="@string/locationTitle"
                android:textColor="?attr/colorPrimary"
                android:textSize="@dimen/textTitle"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/divider_height"
                android:background="@color/colorPrimary" />

            <TextView
                android:id="@+id/descriptionTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/margin10dp"
                android:paddingRight="@dimen/margin10dp"
                android:paddingTop="@dimen/margin10dp"
                android:text="@string/museumDescription"
                android:textColor="@color/colorPrimary" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding10dp"
                android:text="@string/contactText"
                android:textAllCaps="false"
                android:textColor="?attr/colorPrimary"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/divider_height"
                android:layout_marginBottom="@dimen/margin6dp"
                android:background="@color/colorPrimary" />

            <TextView
                android:id="@+id/addressTextView"
                style="@style/contactsTextStyle.detail"
                android:padding="@dimen/padding10dp"
                android:text="@string/museumAddress"
                android:textSize="@dimen/textSizeCityInfo2" />

            <TextView
                android:id="@+id/businessHoursTextView"
                style="@style/contactsTextStyle.detail"
                android:padding="@dimen/padding10dp"
                android:text="@string/museumHours"
                android:textAllCaps="false"
                android:textSize="@dimen/textSizeCityInfo2" />

            <TextView
                android:id="@+id/priceTextView"
                style="@style/contactsTextStyle.detail"
                android:padding="@dimen/padding10dp"
                android:text="@string/museumPrice"
                android:textSize="@dimen/textSizeCityInfo2" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/divider_height"
                android:layout_marginBottom="@dimen/margin6dp"
                android:background="@color/colorPrimary" />

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>
